# web-blog-mipt-project

./: .gitignore  README.md
backend/: models.py  pyproject.toml  requirements.txt  routes.py  run.py
backend/app/: __init__.py  core.py  models.py  routes.py  test.db
frontend/: .babelrc  package-lock.json  package.json  template.html  webpack.config.js
frontend/src/: App.js  App.scss  index.js
frontend/src/components/Article/: Article.js  Article.scss
frontend/src/components/Auth/: Auth.scss  Login.js  Signup.js
frontend/src/components/Menu/: Menu.js  Menu.scss
frontend/src/components/Profile/: Profile.js  Profile.scss
frontend/src/components/RecentPosts/: RecentPosts.js  RecentPosts.scss
