[tool.poetry]
name = "web_blog_backend"
version = "0.1.0"
description = "A simple web blog backend using Flask."
authors = ["Mikhail Kolesov"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
flask-marshmallow = "^0.14.0"
Flask-Migrate = "^3.1.0"
marshmallow-sqlalchemy = "^0.27.0"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
